--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: release-${{ matrix.env }}-${{ matrix.platform }}-${{ github.ref_name }}
-          path: _build/${{ matrix.env }}/rel/**
+          name: jamixir-${{ matrix.env }}-${{ matrix.platform }}-${{ github.ref_name }}
+          path: _build/${{ matrix.env }}/jamixir-*.tar.gz
 
   publish:
     name: Create GitHub Release
@@ -67,6 +67,6 @@ jobs:
       - name: Upload Release Assets
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/**/**
+          files: dist/**/*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
