temp: run workflow on push to branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Build and Release
 
 on:
   push:
+    branches:
+      - release-workflow
     tags:
       - 'gp-*.*.*_app-*.*.*'          # GP releases, e.g. gp-0.6.6_app-0.6.6
 
