--- a/native/pvm/Cargo.toml
+++ b/native/pvm/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 [lib]
 name = "pvm"
 path = "src/lib.rs"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
-rustler = "0.36.2"
-memmap = "0.7.0"
+pvm-rust = { git = "https://github.com/jamixir/pvm-rust" }
+rustler = "0.34.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
