--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,164 +1,61 @@
+x-node-common: &node-common
+  build:
+    context: .
+    ssh: [default]
+  environment:
+    RELEASE_DAEMON: "false"
+  restart: unless-stopped
+  network_mode: "host"
+  volumes:
+    - ./test/keys:/node/keys
+    - ./priv/genesis.json:/node/genesis.json
+
 services:
   node1:
-    build:
-      context: .
-      ssh: [default]
-    environment:
-      RELEASE_DAEMON: "false"
+    <<: *node-common
     command:
-      [
-        "/node/jamixir/bin/jamixir",
-        "start",
-        "--port=9900",
-        "--keys=/node/keys/0.json",
-        "--genesis=/node/genesis.json",
-      ]
-    restart: unless-stopped
-    expose:
-      - "9000"
-    ports:
-      - "9001:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./priv/genesis.json:/node/genesis.json
-    networks:
-      jamnet:
-        ipv6_address: fd00::10
+      - /node/jamixir/jamixir
+      - run
+      - --port=10001
+      - --keys=/node/keys/0.json
+      - --genesis=/node/genesis.json
 
   node2:
-    build:
-      context: .
-      ssh: [default]
-    environment:
-      RELEASE_DAEMON: "false"
+    <<: *node-common
     command:
-      [
-        "/node/jamixir/bin/jamixir",
-        "start",
-        "--port=9901",
-        "--keys=/node/keys/1.json",
-        "--genesis=/node/genesis.json",
-      ]
-    restart: unless-stopped
-    expose:
-      - "9000"
-    ports:
-      - "9002:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./priv/genesis.json:/node/genesis.json
-    networks:
-      jamnet:
-        ipv6_address: fd00::11
+      - /node/jamixir/jamixir
+      - run
+      - --port=10002
+      - --keys=/node/keys/1.json
 
   node3:
-    build:
-      context: .
-      ssh: [default]
-    environment:
-      RELEASE_DAEMON: "false"
+    <<: *node-common
     command:
-      [
-        "/node/jamixir/bin/jamixir",
-        "start",
-        "--port=9902",
-        "--keys=/node/keys/2.json",
-        "--genesis=/node/genesis.json",
-      ]
-    restart: unless-stopped
-    expose:
-      - "9000"
-    ports:
-      - "9003:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./priv/genesis.json:/node/genesis.json
-    networks:
-      jamnet:
-        ipv6_address: fd00::12
+      - /node/jamixir/jamixir
+      - run
+      - --port=10003
+      - --keys=/node/keys/2.json
 
   node4:
-    build:
-      context: .
-      ssh: [default]
-    environment:
-      RELEASE_DAEMON: "false"
+    <<: *node-common
     command:
-      [
-        "/node/jamixir/bin/jamixir",
-        "start",
-        "--port=9903",
-        "--keys=/node/keys/3.json",
-        "--genesis=/node/genesis.json",
-      ]
-    restart: unless-stopped
-    expose:
-      - "9000"
-    ports:
-      - "9004:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./priv/genesis.json:/node/genesis.json
-    networks:
-      jamnet:
-        ipv6_address: fd00::13
+      - /node/jamixir/jamixir
+      - run
+      - --port=10004
+      - --keys=/node/keys/3.json
 
   node5:
-    build:
-      context: .
-      ssh: [default]
-    environment:
-      RELEASE_DAEMON: "false"
+    <<: *node-common
     command:
-      [
-        "/node/jamixir/bin/jamixir",
-        "start",
-        "--port=9904",
-        "--keys=/node/keys/4.json",
-        "--genesis=/node/genesis.json",
-      ]
-    restart: unless-stopped
-    expose:
-      - "9000"
-    ports:
-      - "9005:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./priv/genesis.json:/node/genesis.json
-    networks:
-      jamnet:
-        ipv6_address: fd00::14
+      - /node/jamixir/jamixir
+      - run
+      - --port=10005
+      - --keys=/node/keys/4.json
 
   node6:
-    build:
-      context: .
-      ssh: [default]
-    environment:
-      RELEASE_DAEMON: "false"
+    <<: *node-common
     command:
-      [
-        "/node/jamixir/bin/jamixir",
-        "start",
-        "--port=9905",
-        "--keys=/node/keys/5.json",
-        "--genesis=/node/genesis.json",
-      ]
-    restart: unless-stopped
-    expose:
-      - "9000"
-    ports:
-      - "9006:9000"
-    volumes:
-      - ./test/keys:/node/keys
-      - ./priv/genesis.json:/node/genesis.json
-    networks:
-      jamnet:
-        ipv6_address: fd00::15
-
-networks:
-  jamnet:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: fd00::/64
+      - /node/jamixir/jamixir
+      - run
+      - --port=10006
+      - --keys=/node/keys/5.json
