--- a/native/pvm/Cargo.toml
+++ b/native/pvm/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-pvm-rust = { git = "https://github.com/jamixir/pvm-rust" }
+pvm-rust = { git = "ssh://git@github.com/jamixir/pvm-rust.git" }
 rustler = "0.36.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
