--- a/native/pvm/.cargo/config.toml
+++ b/native/pvm/.cargo/config.toml
@@ -1,6 +1,5 @@
 [target.'cfg(target_os = "macos")']
-rustflags = [
-    "-C", "link-arg=-undefined",
-    "-C", "link-arg=dynamic_lookup"
-]
+rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
 
+[net]
+git-fetch-with-cli = true
