--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           git config --global url."https://${GH_TOKEN}@github.com/".insteadOf "https://github.com/"
           git config --global url."https://${GH_TOKEN}@github.com/".insteadOf "git@github.com:"
+          git config --global url."https://${GH_TOKEN}@github.com/".insteadOf "ssh://git@github.com/"
 
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
